package _2_StrategyDesignPattern;

public interface PaymentStrategy {

    void pay();
}
